--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,24 @@
 [submodule "pathogen"]
 	path = pathogen
-	url = https://github.com:tpope/vim-pathogen.git
+	url = https://github.com/gtpope/vim-pathogen.git
 [submodule "bundle/auto-pairs"]
 	path = bundle/auto-pairs
-	url = https://github.com:jiangmiao/auto-pairs.git
+	url = https://github.com/gjiangmiao/auto-pairs.git
 [submodule "bundle/nerdcommenter"]
 	path = bundle/nerdcommenter
-	url = https://github.com:scrooloose/nerdcommenter.git
+	url = https://github.com/gscrooloose/nerdcommenter.git
 [submodule "bundle/syntastic"]
 	path = bundle/syntastic
-	url = https://github.com:vim-syntastic/syntastic.git
+	url = https://github.com/gvim-syntastic/syntastic.git
 [submodule "bundle/vim-airline"]
 	path = bundle/vim-airline
-	url = https://github.com:vim-airline/vim-airline.git
+	url = https://github.com/gvim-airline/vim-airline.git
 [submodule "bundle/vim-airline-themes"]
 	path = bundle/vim-airline-themes
-	url = https://github.com:vim-airline/vim-airline-themes.git
+	url = https://github.com/gvim-airline/vim-airline-themes.git
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
-	url = https://github.com:airblade/vim-gitgutter.git
+	url = https://github.com/gairblade/vim-gitgutter.git
 [submodule "/home/booster/.vim/bundle/colorschemes"]
 	path = /home/booster/.vim/bundle/colorschemes
 	url = https://github.com/flazz/vim-colorschemes.git
@@ -27,4 +27,4 @@
 	url = https://github.com/flazz/vim-colorschemes.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
-	url = https://github.com:tpope/vim-fugitive.git
+	url = https://github.com/gtpope/vim-fugitive.git
