--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,9 @@
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
 	url = https://github.com/gairblade/vim-gitgutter.git
-[submodule "/home/booster/.vim/bundle/colorschemes"]
-	path = /home/booster/.vim/bundle/colorschemes
-	url = https://github.com/flazz/vim-colorschemes.git
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = https://github.com/gtpope/vim-fugitive.git
+[submodule "bundle/colorschemes"]
+	path = bundle/colorschemes
+	url = https://github.com/flazz/vim-colorschemes.git
