--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/colorschemes"]
 	path = bundle/colorschemes
 	url = https://github.com/flazz/vim-colorschemes.git
+[submodule "bundle/vim-hardtime"]
+	path = bundle/vim-hardtime
+	url = git@github.com:takac/vim-hardtime.git
