--- a/.gitmodules
+++ b/.gitmodules
@@ -27,4 +27,4 @@
 	url = https://github.com/flazz/vim-colorschemes.git
 [submodule "bundle/vim-hardtime"]
 	path = bundle/vim-hardtime
-	url = git@github.com:takac/vim-hardtime.git
+	url = https://github.com/takac/vim-hardtime.git
